src/objects/Account_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Competitors</relationshipLabel>
        <relationshipName>Account_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CUC_CLIENTE__c</fullName>
        <label>CUC CLIENTE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact__c</fullName>
        <label>Fact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Competitor</label>
    <nameField>
        <label>Nombre de nuestro Competidor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>